--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,18 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+	  <groupId>io.appium</groupId>
+	  <artifactId>java-client</artifactId>
+	  <version>5.0.4</version>
+	</dependency>
+	<dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>3.13.0</version>
     </dependency>
   </dependencies>
 
